--- a/i18n/locales/es/response.json
+++ b/i18n/locales/es/response.json
@@ -13,6 +13,7 @@
       "new_subcategory": "Subcategoría creada exitosamente",
       "new_product": "Producto creado exitosamente",
       "new_client" :"Cliente creado exitosamente",
+      "new_payment": "Pago creado exitosamente",
       "update_category": "Categoría actualizada exitosamente",
       "update_subcategory": "Subcategoría actualizada exitosamente",
       "update_product": "Producto actualizado exitosamente",
