--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -5,14 +5,14 @@
     },
     "login": {
       "title": "Welcome!",
-      "username": "Username",
+      "email": "Email",
       "password": "Password",
       "button": "LogIn",
       "changeForm": "Sign Up Here!"
     },
     "register": {
       "title": "New User",
-      "username": "Username",
+      "email": "email",
       "password": "Password",
       "confirmPassword": "Confirm password",
       "button": "register",
