--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -5,7 +5,7 @@
     },
     "login": {
       "title": "¡Bienvenido!",
-      "username": "Nombre de Usuario",
+      "email": "Correo Electrónico",
       "password": "Contraseña",
       "button": "Iniciar Sesión",
       "changeForm": "¡Regístrate Aquí!"
