feat (translates): add new keys to auth module

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -13,6 +13,9 @@
     "register": {
       "title": "New User",
       "email": "email",
+      "firstName": "First Name",
+      "lastName": "Last Name",
+      "birthday": "birthday",
       "password": "Password",
       "confirmPassword": "Confirm password",
       "button": "register",
