--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -12,7 +12,10 @@
     },
     "register": {
       "title": "Nuevo Usuario",
-      "username": "Nombre de Usuario",
+      "firstName": "Primer Nombre",
+      "lastName": "Apellido",
+      "birthday": "Cumpleaños",
+      "email": "Correo Electrónico",
       "password": "Contraseña",
       "confirmPassword": "Confirmar Contraseña",
       "button": "Registrarse",
