fix (translates): change key birthday to birthdate

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -15,7 +15,7 @@
       "email": "email",
       "firstName": "First Name",
       "lastName": "Last Name",
-      "birthday": "birthday",
+      "birthdate": "birthdate",
       "password": "Password",
       "confirmPassword": "Confirm password",
       "button": "register",
