--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -14,7 +14,7 @@
       "title": "Nuevo Usuario",
       "firstName": "Primer Nombre",
       "lastName": "Apellido",
-      "birthday": "Cumpleaños",
+      "birthdate": "Fecha de nacimiento",
       "email": "Correo Electrónico",
       "password": "Contraseña",
       "confirmPassword": "Confirmar Contraseña",
