fix (components): fix errors on translates and format data

--- a/i18n/locales/en/debtors.json
+++ b/i18n/locales/en/debtors.json
@@ -5,9 +5,9 @@
     "modalTitle": "Debts",
     "detailsTable": {
       "date": "Date",
-      "invoice": "Invoice",
-      "total": "Total",
-      "actions": "Actions"
+      "payment": "Payment",
+      "amount": "Amount paid",
+      "method": "Payment Method"
     }
   }
 }
