--- a/i18n/locales/es/formError.json
+++ b/i18n/locales/es/formError.json
@@ -8,6 +8,7 @@
     "max_length": "El tamaño máximo es de {size} letras",
     "min_value": "El valor mínimo es de {min}",
     "max_value": "El valor máximo es de {max}",
+    "valid_price": "El precio debe ser un múltiplo de 50",
     "phone_incomplete": "El número de teléfono esta incompleto",
     "email_error": "El correo no es valido",
     "must_be_18": "Debes tener al menos 18 años.",
