feat (pages): create admin panel page

--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -4,6 +4,7 @@
     "inventory": "Inventory",
     "debtors": "Debtors",
     "history": "History",
+    "user": "User",
     "logout": "Logout"
   },
   "button": {
