--- a/i18n/locales/es/common.json
+++ b/i18n/locales/es/common.json
@@ -4,6 +4,7 @@
     "inventory": "Inventario",
     "debtors": "Deudores",
     "history": "Historial",
+    "user": "Usuarios",
     "logout": "Salir"
   },
   "button": {
