feat (components): add column titles in request table

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -20,6 +20,15 @@
       "confirmPassword": "Confirm password",
       "button": "register",
       "changeForm": "Sign In here!"
+    },
+    "admin":{
+      "timeout": "Request modifications will take 15 minutes to be reflected",
+      "id": "Request",
+      "date": "Date",
+      "email": "Email",
+      "status": "Status",
+      "name": "Name",
+      "actions": "Actions"
     }
   }
 }
