--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -20,6 +20,15 @@
       "confirmPassword": "Confirmar Contraseña",
       "button": "Registrarse",
       "changeForm": "¡Inicia Sesión Aquí!"
+    },
+    "admin":{
+      "timeout": "Las solicitudes modificadas tardaran 15 minutos en ser reflejadas",
+      "id": "Solicitud",
+      "date": "Fecha",
+      "email": "Correo",
+      "status": "Estado",
+      "name": "Nombre",
+      "actions": "Acciones"
     }
   }
 }
