feat (all): implement logic to get register request

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -22,7 +22,7 @@
       "changeForm": "Sign In here!"
     },
     "admin":{
-      "timeout": "Request modifications will take 15 minutes to be reflected",
+      "timeout": "Request modifications will take 15 minutes to be reflected in data base",
       "id": "Request",
       "date": "Date",
       "email": "Email",
