--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -22,7 +22,7 @@
       "changeForm": "¡Inicia Sesión Aquí!"
     },
     "admin":{
-      "timeout": "Las solicitudes modificadas tardaran 15 minutos en ser reflejadas",
+      "timeout": "Las solicitudes modificadas tardaran 15 minutos en ser reflejadas en la base de datos",
       "id": "Solicitud",
       "date": "Fecha",
       "email": "Correo",
