feat (admin-panel): update column headers and add middleware for admin access

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -27,7 +27,7 @@
       "date": "Date",
       "email": "Email",
       "status": "Status",
-      "name": "Name",
+      "name": "Full Name",
       "actions": "Actions"
     }
   }
