--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -27,7 +27,7 @@
       "date": "Fecha",
       "email": "Correo",
       "status": "Estado",
-      "name": "Nombre",
+      "name": "Nombre Completo",
       "actions": "Acciones"
     }
   }
