feat (admin-panel): Implement registration history functionality and update admin panel

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -22,13 +22,27 @@
       "changeForm": "Sign In here!"
     },
     "admin":{
-      "timeout": "Request modifications will take 15 minutes to be reflected in data base",
+      "timeout": "Request modifications will take 5 minutes to be reflected, you can change the response in this time",
       "id": "Request",
       "date": "Date",
       "email": "Email",
       "status": "Status",
       "name": "Full Name",
       "actions": "Actions"
+    },
+    "history":{
+      "id": "Request",
+      "date": "Date",
+      "email": "Email",
+      "status": "Status",
+      "name": "Full Name",
+      "reason": "Reason"
+    },
+    "status": {
+      "placeholder": "Status",
+      "pending": "PENDING",
+      "accepted": "ACCEPTED",
+      "rejected": "REJECTED"
     }
   }
 }
