--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -21,14 +21,28 @@
       "button": "Registrarse",
       "changeForm": "¡Inicia Sesión Aquí!"
     },
-    "admin":{
-      "timeout": "Las solicitudes modificadas tardaran 15 minutos en ser reflejadas en la base de datos",
+    "admin": {
+      "timeout": "Las solicitudes modificadas tardaran 5 minutos en ser reflejadas, puedes cambiar la respuesta en este tiempo",
       "id": "Solicitud",
       "date": "Fecha",
       "email": "Correo",
       "status": "Estado",
       "name": "Nombre Completo",
       "actions": "Acciones"
+    },
+    "history": {
+      "id": "Solicitud",
+      "date": "Fecha",
+      "email": "Correo",
+      "status": "Estado",
+      "name": "Nombre Completo",
+      "reason": "Razón"
+    },
+     "status": {
+      "placeholder": "Estados",
+      "pending": "PENDIENTES",
+      "accepted": "ACEPTADAS",
+      "rejected": "RECHAZADAS"
     }
   }
 }
