feat (translates): add table titles to admin panel.

--- a/i18n/locales/en/auth.json
+++ b/i18n/locales/en/auth.json
@@ -22,7 +22,8 @@
       "changeForm": "Sign In here!"
     },
     "admin":{
-      "timeout": "Request modifications will take 5 minutes to be reflected, you can change the response in this time",
+      "title": "Active Request",
+      "timeout": "Request modifications will take 5 minutes to be reflected, you can change the response in this time. Pending request will be remove in 1 day",
       "id": "Request",
       "date": "Date",
       "email": "Email",
@@ -31,6 +32,7 @@
       "actions": "Actions"
     },
     "history":{
+      "title": "Request History",
       "id": "Request",
       "date": "Date",
       "email": "Email",
