--- a/i18n/locales/es/auth.json
+++ b/i18n/locales/es/auth.json
@@ -22,7 +22,8 @@
       "changeForm": "¡Inicia Sesión Aquí!"
     },
     "admin": {
-      "timeout": "Las solicitudes modificadas tardaran 5 minutos en ser reflejadas, puedes cambiar la respuesta en este tiempo",
+      "title": "Solicitudes Activas",
+      "timeout": "Las solicitudes modificadas tardaran 5 minutos en ser reflejadas, puedes cambiar la respuesta en este tiempo. Las solicitudes pendientes serán removidas en 1 dia.",
       "id": "Solicitud",
       "date": "Fecha",
       "email": "Correo",
@@ -31,6 +32,7 @@
       "actions": "Acciones"
     },
     "history": {
+      "title": "Historial de Solicitudes",
       "id": "Solicitud",
       "date": "Fecha",
       "email": "Correo",
