fix (pages): changes button label to save report

--- a/i18n/locales/es/common.json
+++ b/i18n/locales/es/common.json
@@ -12,7 +12,9 @@
     "delete": "Eliminar",
     "edit": "Editar",
     "cancel": "Cancelar",
-    "search": "Buscar"
+    "search": "Buscar",
+    "generate": "Generar Reporte"
+
   },
   "toast": {
     "success": "Éxito",
