--- a/i18n/locales/en/common.json
+++ b/i18n/locales/en/common.json
@@ -11,7 +11,8 @@
     "save": "Save",
     "delete": "Delete",
     "edit": "Edit",
-    "cancel": "Cancel"
+    "cancel": "Cancel",
+    "generate": "Generate Report"
   },
   "toast": {
     "success": "Success",
